tests/suite/fail/generated/types/fail_sub_f64_string.ny
fn main() {
    let _ = 1.0 - "a" //~ ERROR type mismatch in `subtraction` operation
}
